[package]
name = "forcerelay"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-types = "0.108.0"
ckb-jsonrpc-types = "0.108.0"
ckb-sdk = "2.5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6.8"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"
hex = "0.4.3"
futures = "0.3.23"
async-trait = "0.1.57"
log = "0.4.17"
thiserror = "1.0.37"
ethers = "1.0.2"
jsonrpc-core = "18"

storage = { path = "../storage" }
consensus = { path = "../consensus" }
eth2_types = { git = "https://github.com/synapseweb3/lighthouse", rev = "307ade9", package = "types" }
tree_hash = { version = "0.4.1", git = "https://github.com/synapseweb3/lighthouse", rev = "307ade9" }
eth_light_client_in_ckb-verification = { version = "0.1.0-alpha.0", git = "https://github.com/synapseweb3/eth-light-client-in-ckb", rev = "e94ec1a"}
eth_light_client_in_ckb-prover = { version = "0.1.0-alpha.0", git = "https://github.com/synapseweb3/eth-light-client-in-ckb", rev = "e94ec1a"}

[dev-dependencies]
env_logger = "0.10.0"
tempfile = "3.3.0"
secp256k1 = "0.24"
test-utils = { path = "../test-utils" }

config = { path = "../config" }
client = { path = "../client" }
