[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.8"
serde = { version = "1.0.143", features = ["derive"] }
ssz-rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "cb08f18ca919cc1b685b861d0fa9e2daabe89737" }
hex = "0.4.3"

common = { path = "../common" }
eth2_types = { git = "https://github.com/synapseweb3/lighthouse", rev = "307ade9", package = "types" }
eth_light_client_in_ckb-verification = { version = "0.1.0-alpha.0", git = "https://github.com/synapseweb3/eth-light-client-in-ckb", rev = "e94ec1a" }
